--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Travolo</title>
-  <!-- TODO: Add Open Graph meta tags (og:title, og:description, og:image) for better link previews -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <meta name="description"
+    content="Get 3 personalized travel destinations in under 2 minutes. No signup. No fluff. Built as part of a master's thesis on smarter, privacy-aware travel recommendations." />
+
+  {/* Twitter Card meta tags */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Travolo" />
+  <meta name="twitter:description"
+    content="Get 3 personalized travel destinations in under 2 minutes. No signup. No fluff. Built as part of a master's thesis on smarter, privacy-aware travel recommendations." />
+  <meta name="twitter:image" content="https://furkan.work/twitter-preview.png" />
+
+
+  {/* Open Graph meta tags */}
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Travolo" />
+  <meta property="og:description"
+    content="Get 3 personalized travel destinations in under 2 minutes. No signup. No fluff. Built as part of a master's thesis on smarter, privacy-aware travel recommendations." />
+  <meta property="og:image" content="https://furkan.work/og-preview.png" />
+  <meta property="og:url" content="https://www.travolo.de/" />
+  <meta property="og:site_name" content="Travolo" />
 </head>
 
 <body>
