--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="Travolo" />
   <meta name="twitter:description"
     content="Get 3 personalized travel destinations in under 2 minutes. No signup. No fluff. Built as part of a master's thesis on smarter, privacy-aware travel recommendations." />
-  <meta name="twitter:image" content="https://furkan.work/twitter-preview.png" />
+  <meta name="twitter:image" content="https://www.travolo.de/twitter-preview.png" />
 
 
   {/* Open Graph meta tags */}
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Travolo" />
   <meta property="og:description"
     content="Get 3 personalized travel destinations in under 2 minutes. No signup. No fluff. Built as part of a master's thesis on smarter, privacy-aware travel recommendations." />
-  <meta property="og:image" content="https://furkan.work/og-preview.png" />
+  <meta property="og:image" content="https://www.travolo.de/og-preview.png" />
   <meta property="og:url" content="https://www.travolo.de/" />
   <meta property="og:site_name" content="Travolo" />
 </head>
